--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,7 +57,7 @@
         <h1 class="my-4">{{title}}</h1>
         <div class="row justify-content-md-center">
             {{#each result}}
-            <div class="col-5 border primary mr-md-2 mb-md-2 p-md-2" id="id_{{original_id}}" style="cursor:pointer" onclick="JSController.onClickPost({{this}})">
+            <div class="col-5 border primary mr-md-2 mb-md-2 p-md-2" id="id_{{id_post}}" style="cursor:pointer" onclick="JSController.onClickPost({{id_post}})">
                 <div class="media">
                     <div class="media-header">
                         <img class="mr-3 rounded-circle" src="http://placehold.it/64x64" alt="Generic placeholder image">
